@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>LMS Lite</title>
+    <title>OLMS Lite</title>
     <link rel="stylesheet" type = "text/css" href="{% static '/css/main.css' %}">
     <script type = "text/javascript" src="{% static '/js/main.js' %}"></script>
 
@@ -19,7 +19,7 @@
   {% endif %}
 
   	<a href={% url 'index' %}>
-    	<pre class="logo">LEARNING MANAGEMENT SYSTEM LITE</pre>
+    	<pre class="logo">OPEN LMS LITE</pre>
   	</a>
 
   {% block navbar %}
@@ -48,7 +48,7 @@
   {% endblock content %}
 
   <footer>
-	<div class="copyright">&copy;2019 - <strong>LMSLITE</strong></div>
+	<div class="copyright">&copy;2019 - <strong>OLMSLITE</strong></div>
   </footer>
   
 </body>
