@@ -6,7 +6,7 @@
           <a href="{% url 'index' %}">Home</a>
           <a href="{% url 'profile' %}">Profile</a>
           <a>Assignments</a>
-          <a>Quizes</a>
+          <a>Quizzes</a>
           <a>Homework</a>
           <a>Surveys</a>
           <a>Grades</a>
