@@ -3,28 +3,30 @@
 {% block content %}
 <div class="row">
   <div class="main">
-    <h2>About Me</h2>
-    <h5>Photo of me:</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    <h3>More Text</h3>
-    <p>Lorem ipsum dolor sit ame.</p>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div><br>
-    <div class="fakeimg" style="height:60px;">Image</div>
+    <h2>Open Learning Management System Lite</h2>
+    <p>KYM WILL WRITE SOMETHING REALLY PROFOUND HERE.</p>
+    <h3>About Our Team</h3>
+         <p><strong><u>Kym Haywood II</u></strong><br>
+
+             <br><br><strong><u>Byron Hickey</u></strong><br>
+
+             <br><br><strong><u>Cameron Morgan</u></strong><br>
+
+             <br><br> <strong><u>Austin Simmons</u></strong><br>
+                Austin is a senior computer science major at Georgia Southern University and will be graduating in May 2019.
+                <br>He also works at Koyo Bearings NA in Sylvania GA as a Co-Op.
+             <br><br><strong><u>Chinonyerem Ugwumadu</u></strong><br>
+
+             <br><br><strong><u>Shamarcus Walker</u></strong><br>
+
+        </p>
   </div>
   <div class="side">
     <h2>TITLE HEADING</h2>
     <h5>Title description, Dec 7, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
     <p>Some text..</p>
     <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
     <br>
-    <h2>TITLE HEADING</h2>
-    <h5>Title description, Sep 2, 2017</h5>
-    <div class="fakeimg" style="height:200px;">Image</div>
-    <p>Some text..</p>
-    <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
   </div>
 </div>
 {% endblock content %}
