@@ -9,4 +9,5 @@
 - Created base Course Page Template(@Chino96)
 - Added read in file logic to courses/forms.py (@kh06089)
 - Added navigation bar to the home page (@cm09516)
-- Added navigation bar to the course page (@kh06089)
+- Added navigation bar to the course page (@kh06089/@as12660)
+- Updated auto sizing of page elements for Login and Home (@as12660)
